--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 
 .col-4{
 	width:33.33%;
-	padding:0 15px;
+	padding:50px 15px;
 }
 
 .col-5{
@@ -144,7 +144,7 @@
 }
 .item{
 	color:white;
-	padding:10px 0;
+	padding:10px;
 }
 .btn-cc a{
 	background-color:white;
@@ -221,7 +221,7 @@ h3::after{
 	padding-right:10px;
 }
 #mass{
-	background-color:#87ceeba3;
+	background-color:#87ceeb17;
 	display:flex;
 }
 .bg-clr{
@@ -234,11 +234,80 @@ h3::after{
 	color:orange;
 }
 .bg-clr-1{
-	padding-bottom:38px;
+	padding:18px 0;
 }
+
 .bg-clr-1 h1{
-	font-size:36px;
+	font-weight:400;
+	padding:4px;
+    font-size:40px;
+	color: #123a6d;
 }
 .bg-clr-1 p{
 	font-size:22px;
+}
+.mark-5 i{
+	position: absolute;
+    z-index: 1;
+    top: 50%;
+    transform: translate(-50%, 0px);
+    left: 50%;
+	font-size:40px;
+	border-radius:50%;
+	overflow:hidden;
+	border:2px solid orange;
+	background-color:orange;
+}
+.mark-5{
+	position:relative;
+}
+#insert h3::after{
+	content:"";
+	width:10%;
+	height:2px;
+	background-color:orange;
+	display:inline-block;
+	bottom:24px;
+	left:50;
+	position:absolute;
+}
+.mark-7{
+	text-align:center;
+	box-shadow:-10px -5px 40px 0 rgba(0, 0, 0, 0.1);
+	padding:100px 20px;
+	transition:all ease-in-out 0.3s;
+	
+}
+.mark-7-a{
+	padding-bottom:10px;
+}
+.mark-7-b h4{
+	padding-bottom:10px;
+	font-size:40px;
+	color:#202068d4;
+}
+
+.mark-7-b{
+	font-size:20px;
+}
+.mark-7{
+	padding:8px 24px;
+	background-color:;
+	color:black;
+	padding:100px;
+}
+.mark-7-a:hover{
+	color:#ffa400eb;
+}
+.mark-7-a{
+	width: 70px;
+    height: 60px;
+    border: 1px white solid;
+	background-color:orange;
+    font-size: 30px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+	align-items:center;
 }
